<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@id/navigation_home">

    <fragment
            android:id="@+id/navigation_home"
            android:name="com.crypto.lookup.ui.home.HomeFragment"
            android:label="@string/title_home"
            tools:layout="@layout/fragment_home"/>

    <fragment
            android:id="@+id/navigation_dashboard"
            android:name="com.crypto.lookup.ui.dashboard.DashboardFragment"
            android:label="@string/title_coins"
            tools:layout="@layout/fragment_dashboard">
        <action
            android:id="@+id/action_navigation_dashboard_to_candleChartFragment"
            app:destination="@id/candleChartFragment" />
    </fragment>

    <fragment
            android:id="@+id/navigation_notifications"
            android:name="com.crypto.lookup.ui.profile.ProfileFragment"
            android:label="@string/title_profile"
            tools:layout="@layout/fragment_profile"/>
    <fragment
        android:id="@+id/candleChartFragment"
        android:name="com.crypto.lookup.ui.candlechart.CandleChartFragment"
        android:label="fragment_candlechart"
        tools:layout="@layout/fragment_candlechart" />
</navigation>