<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.register.RegisterFragment" android:background="#05053D">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.register.RegisterFragment" android:background="#05053D">

        <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/registerPB"
                app:layout_constraintTop_toTopOf="@+id/RegisterCreateAccButton"
                app:layout_constraintStart_toStartOf="@+id/RegisterCreateAccButton"
                app:layout_constraintEnd_toEndOf="@+id/RegisterCreateAccButton"
                app:layout_constraintBottom_toBottomOf="@+id/RegisterCreateAccButton" android:visibility="invisible"/>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:boxBackgroundColor="#1A1A45"
                app:boxStrokeColor="@color/white" app:hintTextColor="@color/white"
                android:textColorHint="@color/white"
                android:hint="@string/hint_email"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="@+id/textView3" app:layout_constraintTop_toBottomOf="@+id/textView"
                android:id="@+id/email_til" android:layout_marginStart="25dp" android:layout_marginEnd="25dp"
                android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" android:id="@+id/email"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:boxBackgroundColor="#1A1A45"
                app:boxStrokeColor="@color/white" app:hintTextColor="@color/white"
                android:textColorHint="@color/white"
                android:hint="@string/hint_password"
                app:layout_constraintStart_toStartOf="@+id/email_til"
                app:layout_constraintEnd_toEndOf="@+id/email_til"
                app:layout_constraintTop_toBottomOf="@+id/email_til" android:id="@+id/password_til"
                android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/white" android:id="@+id/password"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:boxBackgroundColor="#1A1A45"
                app:boxStrokeColor="@color/white" app:hintTextColor="@color/white"
                android:textColorHint="@color/white"
                android:hint="@string/hint_password_again" app:layout_constraintStart_toStartOf="@+id/password_til"
                app:layout_constraintEnd_toEndOf="@+id/password_til"
                app:layout_constraintTop_toBottomOf="@+id/password_til" android:id="@+id/password_again_til"
                android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/white" android:id="@+id/passwordAgain"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:boxBackgroundColor="#1A1A45"
                app:boxStrokeColor="@color/white" app:hintTextColor="@color/white"
                android:textColorHint="@color/white"
                android:hint="@string/hint_name" app:layout_constraintStart_toStartOf="@+id/password_again_til"
                app:layout_constraintEnd_toEndOf="@+id/password_again_til"
                app:layout_constraintTop_toBottomOf="@+id/textView2" android:id="@+id/name_til"
                android:layout_marginTop="5dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" android:id="@+id/name"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:boxBackgroundColor="#1A1A45"
                app:boxStrokeColor="@color/white" app:hintTextColor="@color/white"
                android:textColorHint="@color/white"
                android:hint="@string/hint_surname" app:layout_constraintStart_toStartOf="@+id/name_til"
                app:layout_constraintEnd_toEndOf="@+id/name_til"
                app:layout_constraintTop_toBottomOf="@+id/name_til" android:id="@+id/surname_til"
                android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" android:id="@+id/surname"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:boxBackgroundColor="#1A1A45"
                app:boxStrokeColor="@color/white" app:hintTextColor="@color/white"
                android:textColorHint="@color/white"
                android:hint="@string/hint_identity_number" app:layout_constraintStart_toStartOf="@+id/surname_til"
                app:layout_constraintEnd_toEndOf="@+id/surname_til"
                app:layout_constraintTop_toBottomOf="@+id/surname_til" android:id="@+id/identityNumber_til"
                android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" android:id="@+id/identityNumber"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:boxBackgroundColor="#1A1A45"
                app:boxStrokeColor="@color/white" app:hintTextColor="@color/white"
                android:textColorHint="@color/white"
                android:hint="@string/hint_phone_number" app:layout_constraintStart_toStartOf="@+id/identityNumber_til"
                app:layout_constraintEnd_toEndOf="@+id/identityNumber_til"
                app:layout_constraintTop_toBottomOf="@+id/identityNumber_til" android:id="@+id/phoneNo_til"
                android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" android:id="@+id/phoneNo"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
                android:text="@string/test_personal_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView2"
                android:textColor="#FFFFFF" android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/password_again_til"
                app:layout_constraintStart_toStartOf="@+id/password_again_til" android:layout_marginTop="10dp"/>
        <TextView
                android:text="@string/text_account_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="@+id/email_til"/>
        <TextView
                android:text="@string/text_create_account"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/textView3"
                android:textColor="#FFFFFF" android:textSize="20sp"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.498" android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"/>
        <TextView
                android:text="@string/text_already"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView4"
                android:textColor="#FFFFFF"
                app:layout_constraintTop_toTopOf="@+id/RegisterLoginButton"
                app:layout_constraintBottom_toBottomOf="@+id/RegisterLoginButton"
                app:layout_constraintEnd_toStartOf="@+id/RegisterLoginButton" android:layout_marginEnd="10dp"
                app:layout_constraintStart_toStartOf="@+id/RegisterBirthdate"/>
        <Button
                android:text="@string/button_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/RegisterLoginButton"
                android:textColor="#54D0B4"
                android:textSize="14sp"
                android:onClick="loginView"
                android:backgroundTint="@android:color/transparent"
                app:layout_constraintStart_toStartOf="@+id/RegisterCreateAccButton"
                app:layout_constraintEnd_toEndOf="@+id/RegisterCreateAccButton"
                app:layout_constraintTop_toBottomOf="@+id/RegisterCreateAccButton" android:layout_marginTop="10dp"
                style="@style/Widget.AppCompat.Button.Borderless"/>
        <Button
                android:text="@string/button_create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/RegisterCreateAccButton"
                android:backgroundTint="@color/turquois"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/RegisterBirthdate" android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@+id/RegisterBirthdate"/>
        <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/RegisterBirthdate"
                android:textColor="@color/white"
                android:backgroundTint="@android:color/transparent" android:gravity="center|left"
                app:layout_constraintStart_toStartOf="@+id/phoneNo_til"
                app:layout_constraintEnd_toEndOf="@+id/phoneNo_til"
                app:layout_constraintTop_toBottomOf="@+id/phoneNo_til"
                style="@style/Widget.Material3.Button.OutlinedButton.Icon" app:strokeColor="@color/white"
                app:rippleColor="@color/white" android:text="@string/button_birthday" android:textSize="16sp"
                android:layout_marginTop="10dp" app:cornerRadius="0dp" app:icon="@drawable/calendar"
                app:iconTint="@color/white" app:iconPadding="15dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>