<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginFragment" android:background="#05053D" android:backgroundTint="#05053D">
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/main_logo" android:id="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toTopOf="@+id/loginEmail_til"
            android:layout_marginBottom="10dp"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense" app:boxBackgroundColor="#1A1A45"
            app:boxStrokeColor="@color/white" app:hintTextColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="@string/hint_email" app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            android:id="@+id/loginEmail_til"
            android:layout_marginStart="25dp" android:layout_marginEnd="25dp"
            app:layout_constraintBottom_toTopOf="@+id/loginPassword_til" android:layout_marginBottom="20dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/white" android:id="@+id/loginEmail"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense" app:boxBackgroundColor="#1A1A45"
            app:boxStrokeColor="@color/white" app:hintTextColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="@string/hint_password"
            app:layout_constraintStart_toStartOf="@+id/loginEmail_til"
            app:layout_constraintEnd_toEndOf="@+id/loginEmail_til"
            android:id="@+id/loginPassword_til"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="230dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/white" android:id="@+id/loginPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:text="@string/button_login"
            android:layout_width="110dp"
            android:backgroundTint="#54D0B4"
            android:layout_height="45dp" android:id="@+id/LoginLoginButton"
            app:layout_constraintEnd_toEndOf="@+id/loginPassword_til"
            app:layout_constraintTop_toBottomOf="@+id/LoginForgotPassword" android:layout_marginTop="10dp"
            android:visibility="visible"/>
    <Button
            android:text="@string/button_register"
            android:layout_width="110dp"
            android:backgroundTint="#54D0B4"
            android:layout_height="45dp" android:id="@+id/LoginRegisterButton"
            app:layout_constraintStart_toStartOf="@+id/loginPassword_til"
            app:layout_constraintTop_toTopOf="@+id/LoginLoginButton"/>
    <TextView
            android:text="@string/forgotPassword"
            android:layout_width="117dp"
            android:layout_height="19dp" android:id="@+id/LoginForgotPassword"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="@+id/loginPassword_til"
            app:layout_constraintTop_toBottomOf="@+id/loginPassword_til" android:layout_marginTop="10dp"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/loginButtonPB"
            app:layout_constraintTop_toBottomOf="@+id/LoginForgotPassword"
            app:layout_constraintStart_toStartOf="@+id/LoginForgotPassword"
            app:layout_constraintEnd_toEndOf="@+id/LoginForgotPassword" android:layout_marginTop="10dp"
            android:visibility="gone"/>
    <TextView
            android:text="@string/loginFail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/loginFail"
            app:layout_constraintEnd_toEndOf="@+id/LoginLoginButton"
            app:layout_constraintTop_toBottomOf="@+id/LoginLoginButton" android:layout_marginTop="5dp"
            android:textColor="@color/mtrl_error" android:visibility="invisible"/>
</androidx.constraintlayout.widget.ConstraintLayout>