<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.forgotpassword.ForgotPasswordFragment" android:background="#05053D">

    <TextView
            android:text="@string/forgotPassword"
            android:layout_width="260dp"
            android:layout_height="40dp" android:id="@+id/textView5"
            android:gravity="center" android:textColor="#FFFFFF"
            android:textSize="20sp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="250dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/ForgotPasswordEmail" android:padding="10dp"
            android:backgroundTint="#FFFFFF" android:background="#FFFFFF"
            app:layout_constraintTop_toBottomOf="@+id/textView5" android:layout_marginTop="12dp"
            android:textColorHint="#54D0B4" android:textColor="#54D0B4" android:hint="@string/hint_email"
            app:layout_constraintStart_toStartOf="@+id/textView5" app:layout_constraintEnd_toEndOf="@+id/textView5"
            app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="@string/send"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/ForgotPasswordSendButton"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="312dp"
            app:layout_constraintTop_toBottomOf="@+id/ForgotPasswordEmail"
            app:layout_constraintVertical_bias="0.081" android:backgroundTint="#54D0B4"
            app:layout_constraintEnd_toEndOf="@+id/ForgotPasswordEmail"
            app:layout_constraintStart_toStartOf="@+id/ForgotPasswordEmail" app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="X"
            android:layout_width="50dp"
            android:layout_height="50dp" android:id="@+id/ForgotPasswordBackButton"
            android:backgroundTint="#54D0B4" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp" android:layout_marginEnd="16dp"
            android:onClick="loginView"/>
</androidx.constraintlayout.widget.ConstraintLayout>